# taocp

./: .gitignore  README.md
1.3.2.M/: Makefile  fill.mixal  maximum.mixal
1.3.2.P/: Makefile  primes.asm  primes.mixal
memory/: .clang-format  .gitignore  CMakeLists.txt  README.md  runbuild
memory/cmake/: UnitTest.cmake
memory/src/: CMakeLists.txt
memory/src/main/: CMakeLists.txt  main.cpp
memory/src/memory/: CMakeLists.txt  linear.cpp  linear.h  memory.cpp  memory.h  memory_utils.h
memory/test/: CMakeLists.txt
memory/test/memory/: CMakeLists.txt  linear_test.cpp  memory_test.cpp  memory_test_utils.cpp  memory_test_utils.h
resources/: mixal.xml
